--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch || github.ref_name }}
+          fetch-depth: 1
+          #ref: ${{ github.event.inputs.branch || github.ref_name }}
 
       - name: Build Step
         run: |
@@ -53,7 +54,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch || github.ref_name }}
+          fetch-depth: 1
+          #ref: ${{ github.event.inputs.branch || github.ref_name }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -77,7 +79,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch || github.ref_name }}
+          fetch-depth: 1
+          #ref: ${{ github.event.inputs.branch || github.ref_name }}
 
       - name: Deploy Step
         run: |
