--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,6 @@
-# This is a workflow for GitHub Actions
-
-# # ─────────────────────────────
-# # GitHub Actions: CI Pipeline
-# # ─────────────────────────────
+# ─────────────────────────────
+# GitHub Actions: CI Pipeline
+# ─────────────────────────────
 name: CI Pipeline
 
 on:
@@ -36,7 +34,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-          #ref: ${{ github.event.inputs.branch || github.ref_name }}
 
       - name: Build Step
         run: |
@@ -44,7 +41,7 @@ jobs:
           echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
 
   # ─────────────────────────────
-  #  Step 2: Test Job
+  # Step 2: Test Job
   # ─────────────────────────────
   test:
     name: Test
@@ -55,7 +52,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-          #ref: ${{ github.event.inputs.branch || github.ref_name }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -69,10 +65,10 @@ jobs:
         run: terraform validate
 
   # ─────────────────────────────
-  #  Step 3: Continous Deployment Job
+  # Step 3: Continuous Deployment Job
   # ─────────────────────────────
   deploy:
-    name: Continous Deployment
+    name: Continuous Deployment
     runs-on: ubuntu-latest
     needs: test
     steps:
@@ -80,12 +76,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-          #ref: ${{ github.event.inputs.branch || github.ref_name }}
-
-      - name: Deploy Step
-        run: |
-          echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
-          # terraform apply -auto-approve or AWS CLI logic here
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -108,6 +98,146 @@ jobs:
           unzip awscliv2.zip
           sudo ./aws/install --update
           aws --version
+
+      - name: Terraform Init and Apply
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
+          TF_VAR_vpc_id: "vpc-bd543ec7"
+        run: |
+          terraform init -upgrade
+          terraform apply -auto-approve
+
+  # ─────────────────────────────
+  # Step 4: Post-Deployment Job
+  # ─────────────────────────────
+  post-deploy:
+    name: Post Deployment
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
+
+      - name: Post-Deployment Step
+        run: |
+          echo "Running post-deployment tasks for ${{ github.event.inputs.branch || github.ref_name }}"
+          # Example: notify Slack, tag repo, run health checks, etc.
+
+
+# # This is a workflow for GitHub Actions
+
+# # # ─────────────────────────────
+# # # GitHub Actions: CI Pipeline
+# # # ─────────────────────────────
+# name: CI Pipeline
+
+# on:
+#   push:
+#     branches: [ "master" ]
+#   pull_request:
+#     branches: [ "master" ]
+#   workflow_dispatch:
+#     inputs:
+#       branch:
+#         description: "Select the branch to run this workflow on"
+#         required: false
+#         default: "master"
+#         type: choice
+#         options:
+#           - main
+#           - dev
+#           - staging
+#           - feature
+
+# jobs:
+
+#   # ─────────────────────────────
+#   # Step 1: Build Job
+#   # ─────────────────────────────
+#   build:
+#     name: Build
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 1
+#           #ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Build Step
+#         run: |
+#           echo "Starting build..."
+#           echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
+
+#   # ─────────────────────────────
+#   #  Step 2: Test Job
+#   # ─────────────────────────────
+#   test:
+#     name: Test
+#     runs-on: ubuntu-latest
+#     needs: build
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 1
+#           #ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Setup Terraform
+#         uses: hashicorp/setup-terraform@v2
+#         with:
+#           terraform_version: 1.5.7
+
+#       - name: Terraform Init
+#         run: terraform init
+
+#       - name: Terraform Validate
+#         run: terraform validate
+
+#   # ─────────────────────────────
+#   #  Step 3: Continous Deployment Job
+#   # ─────────────────────────────
+#   deploy:
+#     name: Continous Deployment
+#     runs-on: ubuntu-latest
+#     needs: test
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+#         with:
+#           fetch-depth: 1
+#           #ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+#       - name: Deploy Step
+#         run: |
+#           echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
+#           # terraform apply -auto-approve or AWS CLI logic here
+
+#       - name: Setup Terraform
+#         uses: hashicorp/setup-terraform@v2
+#         with:
+#           terraform_version: 1.5.7
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+
+#       - name: Install AWS SDK
+#         run: npm install @aws-sdk/client-ec2
+
+#       - name: Install AWS CLI
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install -y unzip curl
+#           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+#           unzip awscliv2.zip
+#           sudo ./aws/install --update
+#           aws --version
 
       # - name: Configure AWS CLI Credentials
       #   run: |
