--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,8 @@
-# ─────────────────────────────
-# GitHub Actions: CI Pipeline
-# ─────────────────────────────
+# This is a workflow for GitHub Actions
+
+# # ─────────────────────────────
+# # GitHub Actions: CI Pipeline
+# # ─────────────────────────────
 name: CI Pipeline
 
 on:
@@ -34,6 +36,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+          #ref: ${{ github.event.inputs.branch || github.ref_name }}
 
       - name: Build Step
         run: |
@@ -41,7 +44,7 @@ jobs:
           echo "Simulating build for ${{ github.event.inputs.branch || github.ref_name }}"
 
   # ─────────────────────────────
-  # Step 2: Test Job
+  #  Step 2: Test Job
   # ─────────────────────────────
   test:
     name: Test
@@ -52,6 +55,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+          #ref: ${{ github.event.inputs.branch || github.ref_name }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -65,10 +69,10 @@ jobs:
         run: terraform validate
 
   # ─────────────────────────────
-  # Step 3: Continuous Deployment Job
+  #  Step 3: Continous Deployment Job
   # ─────────────────────────────
   deploy:
-    name: Continuous Deployment
+    name: Continous Deployment
     runs-on: ubuntu-latest
     needs: test
     steps:
@@ -76,6 +80,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+          #ref: ${{ github.event.inputs.branch || github.ref_name }}
+
+      - name: Deploy Step
+        run: |
+          echo "Deploying application from ${{ github.event.inputs.branch || github.ref_name }}"
+          # terraform apply -auto-approve or AWS CLI logic here
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -98,34 +108,6 @@ jobs:
           unzip awscliv2.zip
           sudo ./aws/install --update
           aws --version
-
-      - name: Terraform Init and Apply
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1
-          TF_VAR_vpc_id: "vpc-bd543ec7"
-        run: |
-          terraform init -upgrade
-          terraform apply -auto-approve
-
-  # ─────────────────────────────
-  # Step 4: Post-Deployment Job
-  # ─────────────────────────────
-  post-deploy:
-    name: Post Deployment
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-
-      - name: Post-Deployment Step
-        run: |
-          echo "Running post-deployment tasks for ${{ github.event.inputs.branch || github.ref_name }}"
-          # Example: notify Slack, tag repo, run health checks, etc.
 
 
 # # This is a workflow for GitHub Actions
