--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,6 +80,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform Init
+        run: terraform init -upgrade
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
           #ref: ${{ github.event.inputs.branch || github.ref_name }}
 
       - name: Deploy Step
@@ -109,14 +117,14 @@ jobs:
           sudo ./aws/install --update
           aws --version
 
-      - name: Terraform Init and Apply
-        env:
-          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          TF_VAR_aws_region: "us-east-1"
-        run: |
-          terraform init -upgrade
-          terraform apply -auto-approve
+      # - name: Terraform Init and Apply
+      #   env:
+      #     TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     TF_VAR_aws_region: "us-east-1"
+      #   run: |
+      #     terraform init -upgrade
+      #     terraform apply -auto-approve
 
 
 # # This is a workflow for GitHub Actions
